--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+### Build outputs ###
+build/
+src/java/eod-aggregator-streams/build/
+
 ### Eclipse ###
 .apt_generated
 .classpath
